--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,3 +1,16 @@
 {% extends "nav.html" %}
+{% set active_page = "Home" %}
 
-<p> this is me, mario </p>
+
+
+{% block content %}
+
+    <div class="col">
+        <h1 class=" justify-content-md-center  text-center"> Introduction </h1>
+        <p> This is a web application for the simulation of Electromagnetic wave propagation inside different medium.</p>
+        <p> It is also able to simualtion the heat and stress field as a result of the absorption</p>
+        <h1 class="justify-content-md-center text-center">Account</h1>
+        <p> Please go to login page to contact the admin and create the account necessary to run the simulation</p>
+    </div>
+
+{% endblock %}
