--- a/webapp/templates/nav.html
+++ b/webapp/templates/nav.html
@@ -13,14 +13,14 @@
     {% set active_page = active_page|default('home') %}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Menu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li {% if 'home' == active_page %} class="active" {% endif %}>
+                <li {% if 'Home' == active_page %} class="active" {% endif %}>
                     <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li {% if 'Geometry' == active_page %} class="active" {% endif %}>
@@ -41,7 +41,7 @@
                 <li class="nav-item dropdown" {% if id == active_page %} class="active" {% endif %}>
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
+                        Login
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Action</a>
@@ -56,16 +56,24 @@
 </head>
 
 <body>
-    <div class='row'>
-        <div id="content" class='container col'>{% block content_left %}{% endblock %}</div>
-        <div id="content" class='container col'>{% block content_right %}{% endblock %}</div>
-    </div>
+    <div class='container'>
+        <div class = 'row'>
+        <div id="content_left" class='col'>{% block content_left %}{% endblock %}</div>
+        <div id="content_right" class='col'>{% block content_right %}{% endblock %}</div>
+        </div>
+        
+        <div id="content" class='row'>{% block content %}{% endblock %}</div>
 
-    <div id="footer" class="align-items-end">
-        {% block footer %}
-        &copy; Copyright 2020 by <a href="http://mailto.chenduona@gmail.com/">Peter Chen</a>.
-        {% endblock %}
     </div>
 </body>
+
+<footer>
+    <div id="footer" class="jumbotron text-center  fixed-bottom" style="margin-bottom:0">
+        {% block footer %}
+        &copy; 2020 by <a href="https://www.linkedin.com/in/peter-qin-chen-2ba832154/">Peter Chen</a>.
+        {% endblock %}
+    </div>
+</footer>
+
 
 </html>
